<resources>
    <string name="app_name">Kotlin washX project</string>
    <string name="splash_text"><![CDATA[We wash your cars,\n trucks, exotics, boats & more…]]></string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="we_will_assign_our_executive_soon">We will assign our executive soon</string>
    <string name="re_book">Re-Book</string>
    <string name="before_service">Before Service</string>
    <string name="after_service">After Service</string>
    <string name="contact_number">Contact number</string>
    <string name="email_address">Email address</string>
    <string name="cancel">Cancel</string>
    <!--    <string name="change_password">Change Password</string>-->
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_any">Select any</string>
    <string name="select_one">What are you looking for?</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="rate_the_service">Rate the service</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="faq_s">FAQ’s</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="add_another_vehicle_for_service">Add another vehicle for service</string>
    <string name="continu">Continue</string>
    <string name="ok">Ok</string>
    <string name="upcoming">Upcoming Appointment</string>
    <string name="summary">Summary</string>
    <string name="type_your_message">Type your message</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color='#003663'><u>Sign Up</u></font></string>
    <string name="already_have_an_account_sign_in">Already have an account? <font color='#003663'><u>Sign In</u></font></string>
    <string name="skip">Skip</string>
    <string name="add_address">Add Address</string>
    <string name="add_vehicle_detail">Add Vechicle Detail</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_you_4_digit_otp_on_nyour_mobile_number">We will send you 4 digit OTP on \n your mobile number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="upload">Upload From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>