<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/grpHistory"
        android:checkableBehavior="single">
        <item
            android:id="@+id/history"
            android:icon="@drawable/time_circle"
            android:title="@string/history" />
    </group>

    <group
        android:id="@+id/grpProfile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/grpFQ"
        android:checkableBehavior="single">
        <item
            android:id="@+id/f_n_q"
            android:icon="@drawable/chat"
            android:title="@string/faq_s" />
    </group>
    <group
        android:id="@+id/grpSetting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/setting"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/grpLogout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>single

</menu>
